--- a/src/404.md
+++ b/src/404.md
@@ -1,6 +1,7 @@
 ---
-title: 404
+title: Page Not Found
 layout: page.njk
 permalink: /404.html
 ---
-404 not found!
+
+![404 page not found](/src/assets/img/404.png)
